# demo-project-wind-prediction

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build_and_test.yaml
config/: training_parameters.yaml
data/: download_data.py
db/: create_database.py
docker/.aws/: config  credentials
docker/serving/: Dockerfile
docker/train/: Dockerfile
kubernetes/: nohup.out  serving_deployment.yaml  serving_service.yaml
src/: dataset.py  model.py  serving.py  testing.py  train.py
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
test/: test_conf.yaml  test_integration.py  test_serving.py  test_train.py
workflow/: prefect.yaml  values.yaml
