[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
s3fs = "*"
evidently = "*"
mlflow = "*"
scikit-learn = "*"
pytest = "*"
pyarrow = "*"
prefect = "*"
prefect-docker = "*"
prefect-kubernetes = "*"
fastapi = "*"
uvicorn = "*"
psycopg = {version = "*", extras=["binary", "pool"]}
boto3 = "*"
optuna = "*"
PyYAML = "*"
pydantic = "*"
black = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
